# alpha-cost-hud

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
mockups/: directions.html  v2.html
src/: App.tsx  carousel.css  config.ts  format.ts  gateway.ts  localAgents.ts  main.tsx  mockData.ts  useCountUp.ts  useLocalAgents.ts  usePolling.ts  useProviders.ts
src-tauri/: Cargo.toml  pricing.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  local_agents.rs  main.rs
src/components/: Carousel.tsx  ConfigScreen.tsx  Hud.tsx  ProvidersScreen.tsx
src/providers/: connectors.ts  types.ts
