[package]
name = "alpha-cost-hud"
version = "0.1.0"
description = "Always-on-top LLM fleet cost HUD"
authors = ["Alpha"]
edition = "2021"

[lib]
name = "alpha_cost_hud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
